deployments/homelab/kubernetes/homepage-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homelab
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: homelab
      sectionName: http
  hostnames:
    - "homepage-dev.gaborzeller.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
